samples/_failures_safe/1761349965_a551e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c1159d8.c: In function ‘main’:
./samples/SAFE/__tmp_2c1159d8.c:164:29: error: expected ‘]’ at end of input
  164 |     if (len > 0 && input[len
      |                             ^
      |                             ]
./samples/SAFE/__tmp_2c1159d8.c:164:5: error: expected declaration or statement at end of input
  164 |     if (len > 0 && input[len
      |     ^~
